<resources>
    <string name="app_name">Survey</string>
    <string name="str_welcome">WELCOME TO</string>
    <string name="str_attend">TAKE PART IN OUR SURVEY!</string>
    <string name="str_statement">Before we start, here are things you should know:</string>
    <string name="str_request1">- Please be honest when making your choice.</string>
    <string name="str_request2">- We are just doing a research so you don\'t have to fake your information.</string>
    <string name="str_request3">- Please follow the step we designed for you and don\'t skip any questions.</string>
    <string name="cb_accept">I accept the requests</string>
    <string name="btn_go">LET\'S START!</string>
    <string name="str_title1">Question1</string>
    <string name="str_question1">Which brand phone will you choose if you are going to buy a new one?</string>
    <string name="rb_iphone">Iphone</string>
    <string name="rb_samsung">Samsung</string>
    <string name="rb_mi">MI</string>
    <string name="rb_lenovo">Lenovo</string>
    <string name="rb_sony">Sony</string>
    <string name="rb_others">Others</string>
    <string name="btn_next">Next</string>
    <string name="rb_nokia">Nokia</string>
    <string name="str_title2">Question2</string>
    <string name="str_question2">How much does your phone cost?</string>
    <string name="rb_first_class">Under 1000</string>
    <string name="rb_second_class">1000~1999</string>
    <string name="rb_third_class">2000~2999</string>
    <string name="rb_forth_class">3000~3999</string>
    <string name="rb_fifth_class">More than 4000</string>
    <string name="str_title3">Question3</string>
    <string name="str_question3">What kind of phone are you using?</string>
    <string name="rb_2g">2G</string>
    <string name="rb_3g">3G</string>
    <string name="rb_4g">4G</string>
    <string name="str_title4">Question4</string>
    <string name="str_question4">What functions does your phone have now?</string>
    <string name="cb_music">Music functions</string>
    <string name="cb_photo">Photo functions</string>
    <string name="cb_game">Game functions</string>
    <string name="cb_business">Business functions(Word,Excel,etc.)</string>
    <string name="cb_gps">GPS functions</string>
    <string name="cb_data">Data functions(Bluetooth,WLAN,etc.)</string>
    <string name="cb_others">Others</string>
    <string name="str_title5">Question5</string>
    <string name="str_question5">What functions are the most often used?</string>
    <string name="str_question6">What function do you want your phone to have in the future?</string>
    <string name="str_title6">Question6</string>
    <string name="str_answer_hint">write your answer to here</string>
    <string name="str_title7">Question7</string>
    <string name="str_question7">In which condition will buy a new phone?</string>
    <string name="rb_one_or_two">When the old phone has been used for a year or two.(but it still works)</string>
    <string name="rb_three">When the old phone has been used for more than three years.(but it still works)</string>
    <string name="rb_old_break_down">When the old phone breaks down.</string>
    <string name="rb_new_released">When a new phone was released?</string>
    <string name="str_title8">Question8</string>
    <string name="rb_performance">Performance</string>
    <string name="rb_price">Price</string>
    <string name="rb_appearance">Appearance</string>
    <string name="str_title9">Question9</string>
    <string name="str_question9">What characteristic do you think is the most important to evaluate a phone?</string>
    <string name="str_title10">Question10</string>
    <string name="str_question10">How old are you?</string>
    <string name="rb_under18">Under 18</string>
    <string name="rb_19to25">19~25</string>
    <string name="rb_25to35">25~35</string>
    <string name="rb_beyond35">Beyond 35</string>
    <string name="str_title11">Question11</string>
    <string name="str_question11">What\'s your gender?</string>
    <string name="rb_male">Male</string>
    <string name="rb_female">Female</string>
    <string name="str_title12">Question12</string>
    <string name="str_question12">How much money do you earn per month?</string>
    <string name="rb_NoJob">I haven\'t  got a job</string>
    <string name="rb_under3000">Under 3000</string>
    <string name="rb_3t25t">3000~5000</string>
    <string name="rb_5t210t">5000~10000</string>
    <string name="rb_more10t">More than 10000</string>
    <string name="str_thxu">THANK YOU</string>
    <string name="str_thx_for">FOR YOUR ANSWERS!</string>
    <string name="btn_finish">report</string>
    <string name="img_cd">Thank you for your answers.</string>
    <string name="accept_requests">Please accept our requests!</string>
    <string name="btn_exit">exit</string>
    <string name="report_title">Here are your answers!</string>
    <string name="report_answer">your answer</string>
    <string name="empty_answer">Please choose a answer at least!</string>
    <string name="btn_save">SAVE</string>
    <string name="single">Single Select</string>
    <string name="multiple">Multiple Select</string>
    <string name="fill">Fill the Blank</string>
    <string name="set_pswd">Please set a password to unlock!</string>
    <string name="pswd">your password</string>
    <string name="okay">Okay</string>
    <string name="cpswd">confirm your password</string>
    <string name="input_paswd">Please input your password</string>
    <string name="scan">scan</string>
    <string name="empty_pswd">Please enter the password</string>
    <string name="match_pswd">Input should be matched</string>
    <string name="is_lock_extra">lock</string>
    <string name="wrong_pswd">Wrong password!</string>
    <string name="no_lct_service">it is not able to get location service</string>
    <string name="no_lct_provider">it is not able to get provider</string>
    <string name="save_ok">save successfully</string>
    <string name="save_fail">save failed!</string>
    <string name="without_data">Please scan QR Code to load questions</string>
    <string name="get_data">scan success!</string>
    <string name="get_no_data">scan failed!</string>
</resources>
