<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--  Start : Your code should be within this block -->

    <TextView
        android:id="@+id/txt_title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:layout_marginBottom="@dimen/margin_30dp"
        android:text="@string/str_title1"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_size_large" />

    <TextView
        android:id="@+id/txt_question1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_40dp"
        android:layout_marginTop="@dimen/margin_zero"
        android:layout_marginRight="@dimen/margin_40dp"
        android:layout_marginBottom="@dimen/margin_zero"
        android:text="@string/str_question1"
        android:textSize="@dimen/font_size_middle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/margin_50dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:layout_marginRight="@dimen/margin_50dp"
        android:layout_marginBottom="@dimen/margin_30dp"
        android:layout_weight="1">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/iphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5dp"
                android:text="@string/rb_iphone"
                android:textSize="@dimen/font_size_average" />

            <RadioButton
                android:id="@+id/nokia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5dp"
                android:text="@string/rb_nokia"
                android:textSize="@dimen/font_size_average" />

            <RadioButton
                android:id="@+id/samsung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5dp"
                android:text="@string/rb_samsung"
                android:textSize="@dimen/font_size_average" />

            <RadioButton
                android:id="@+id/mi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5dp"
                android:text="@string/rb_mi"
                android:textSize="@dimen/font_size_average" />

            <RadioButton
                android:id="@+id/lenovo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5dp"
                android:text="@string/rb_lenovo"
                android:textSize="@dimen/font_size_average" />

            <RadioButton
                android:id="@+id/sony"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5dp"
                android:text="@string/rb_sony"
                android:textSize="@dimen/font_size_average" />

            <RadioButton
                android:id="@+id/others"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5dp"
                android:text="@string/rb_others"
                android:textSize="@dimen/font_size_average" />

        </RadioGroup>
    </ScrollView>

    <Button
        android:id="@+id/btn_next1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:layout_marginBottom="@dimen/margin_30dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_next"
        android:textSize="@dimen/font_size_middle"
        android:onClick="onClickNext"/>


    <!-- END    : Your code should be within this block -->

</LinearLayout>
