<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--  Start : Your code should be within this block -->

    <TextView
        android:id="@+id/txt_title7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:layout_marginBottom="@dimen/margin_zero"
        android:text="@string/str_title7"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_size_large" />

    <TextView
        android:id="@+id/txt_question7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_40dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:layout_marginRight="@dimen/margin_40dp"
        android:layout_marginBottom="@dimen/margin_zero"
        android:text="@string/str_question7"
        android:textSize="@dimen/font_size_middle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/margin_50dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:layout_marginRight="@dimen/margin_50dp"
        android:layout_marginBottom="@dimen/margin_zero"
        android:layout_weight="1">

        <RadioGroup
            android:id="@+id/rg_question7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_one_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5dp"
                android:text="@string/rb_one_or_two"
                android:textSize="@dimen/font_size_average" />

            <RadioButton
                android:id="@+id/rb_three_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5dp"
                android:text="@string/rb_three"
                android:textSize="@dimen/font_size_average" />

            <RadioButton
                android:id="@+id/rb_old_break_down"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5dp"
                android:text="@string/rb_old_break_down"
                android:textSize="@dimen/font_size_average" />

            <RadioButton
                android:id="@+id/rb_new_released"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5dp"
                android:text="@string/rb_new_released"
                android:textSize="@dimen/font_size_average" />

            <RadioButton
                android:id="@+id/rb_others7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5dp"
                android:text="@string/rb_others"
                android:textSize="@dimen/font_size_average" />
        </RadioGroup>
    </ScrollView>

    <Button
        android:id="@+id/btn_next7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:layout_marginBottom="@dimen/margin_30dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_next"
        android:textSize="@dimen/font_size_middle"
        android:onClick="onClickNext"/>

    <!-- END    : Your code should be within this block -->

</LinearLayout>
