<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--  Start : Your code should be within this block -->

    <TextView
        android:id="@+id/txtTitle4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:layout_marginBottom="@dimen/margin_zero"
        android:text="@string/txt_title4"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_size_large" />

    <TextView
        android:id="@+id/txtQuestion4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_40dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:layout_marginRight="@dimen/margin_40dp"
        android:layout_marginBottom="@dimen/margin_zero"
        android:text="@string/txt_question4"
        android:textSize="@dimen/font_size_middle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/margin_50dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:layout_marginRight="@dimen/margin_50dp"
        android:layout_marginBottom="@dimen/margin_30dp"
        android:layout_weight="1">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_zero">

            <CheckBox
                android:id="@+id/cbMusic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5dp"
                android:text="@string/cb_music"
                android:textSize="@dimen/font_size_average" />

            <CheckBox
                android:id="@+id/cbPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5dp"
                android:text="@string/cb_photo"
                android:textSize="@dimen/font_size_average" />

            <CheckBox
                android:id="@+id/cbGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5dp"
                android:text="@string/cb_game"
                android:textSize="@dimen/font_size_average" />

            <CheckBox
                android:id="@+id/cbBusiness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5dp"
                android:text="@string/cb_business"
                android:textSize="@dimen/font_size_average" />

            <CheckBox
                android:id="@+id/cbGPS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5dp"
                android:text="@string/cb_gps"
                android:textSize="@dimen/font_size_average" />

            <CheckBox
                android:id="@+id/cbData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5dp"
                android:text="@string/cb_data"
                android:textSize="@dimen/font_size_average" />

            <CheckBox
                android:id="@+id/cbOthers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5dp"
                android:text="@string/cb_others"
                android:textSize="@dimen/font_size_average" />
        </RadioGroup>
    </ScrollView>

    <Button
        android:id="@+id/btnNext4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:layout_marginBottom="@dimen/margin_30dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_next"
        android:textSize="@dimen/font_size_middle"
        android:onClick="onClickNext"/>

    <!-- END    : Your code should be within this block -->

</LinearLayout>
