<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--  Start : Your code should be within this block -->

    <TextView
        android:id="@+id/txtTitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:layout_marginBottom="@dimen/margin_30dp"
        android:text="@string/txt_title2"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_size_large" />

    <TextView
        android:id="@+id/txtQuestion2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_40dp"
        android:layout_marginRight="@dimen/margin_40dp"
        android:layout_marginBottom="@dimen/margin_30dp"
        android:text="@string/txt_question2"
        android:textSize="@dimen/font_size_middle" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/margin_50dp"
        android:layout_marginRight="@dimen/margin_50dp"
        android:layout_weight="1">

        <RadioButton
            android:id="@+id/rbFirstClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5dp"
            android:text="@string/rb_first_class"
            android:textSize="@dimen/font_size_average" />

        <RadioButton
            android:id="@+id/rbSecondClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5dp"
            android:text="@string/rb_second_class"
            android:textSize="@dimen/font_size_average" />

        <RadioButton
            android:id="@+id/rbThirdClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5dp"
            android:text="@string/rb_third_class"
            android:textSize="@dimen/font_size_average" />

        <RadioButton
            android:id="@+id/rbForthClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5dp"
            android:text="@string/rb_forth_class"
            android:textSize="@dimen/font_size_average" />

        <RadioButton
            android:id="@+id/rbFifthClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5dp"
            android:text="@string/rb_fifth_class"
            android:textSize="@dimen/font_size_average" />

    </RadioGroup>

    <Button
        android:id="@+id/btnNext2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:layout_marginBottom="@dimen/margin_30dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_next"
        android:textSize="@dimen/font_size_middle"
        android:onClick="onClickNext"/>

    <!-- END    : Your code should be within this block -->

</LinearLayout>
